...
                .align(Alignment.TopCenter)
                .windowInsetsPadding(WindowInsets.displayCutout.only(WindowInsetsSides.Horizontal)),
        ) {
            TitleBar(
                modifier = Modifier.fillMaxWidth(),
                onNavActionClick = onBackClick,
                title = { Text(text = "Settings") },
            )

            LazyColumn(
                modifier = Modifier,
                contentPadding = PaddingValues(bottom = CONTENT_BOTTOM_PADDING),
            ) {
                item(key = "settings-change-theme") {
                    SettingsItem(
                        icon = painterResource(Res.drawable.ic_paint),
                        text = "Change Theme",
                        modifier = Modifier.testTag(TripPlannerTestTags.SETTINGS_ITEM_THEME),
                        onClick = {
                            onChangeThemeClick()
                        },
                    )
                }
...
