...
        return when (this) {
            is TransportMode.Bus -> "Hoppin' the concrete jungle!"
            is TransportMode.Coach -> "Coachin' it!"
            is TransportMode.Ferry -> "Just floatin!"
            is TransportMode.LightRail -> "Mah city, mah rules!"
            is TransportMode.Metro -> "Surf the sub, no cap!"
            is TransportMode.Train -> "On the track, no lookin' back!"
        }
    }

@Composable
fun ThemeSelectionScreen(
    selectedTransportMode: TransportMode?,
...

        Column {
            TitleBar(
                navAction = {
                    ActionButton(
                        onClick = onBackClick,
                        contentDescription = "Back",
                    ) {
                        Image(
                            imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                            contentDescription = null,
                            colorFilter = ColorFilter.tint(KrailTheme.colors.onSurface),
                            modifier = Modifier.size(24.dp),
...
