<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">Krail App</string>
</resources>

