...
    }
}

// region Previews

val parkRideFacilityDetailPreview = ParkRideFacilityDetail(
    facilityName = "Tallawong P1",
    spotsAvailable = 120,
    percentageFull = 60,
    timeText = "2 min ago",
    totalSpots = 800,
    stopId = "212000",
    facilityId = "1234567890",
...
