appId: xyz.ksharma.krail.debug
---
- tapOn:
    point: "34%,6%"
- waitForAnimationToEnd
- assertVisible: "Settings"
- tapOn: "Change Theme"
- waitForAnimationToEnd
- tapOn: "Light"
- waitForAnimationToEnd
